# k8-api

./: Makefile
src/k8-client/: Cargo.toml
src/k8-client/src/: error.rs  lib.rs
src/k8-client/src/h1/: client.rs  config.rs  mod.rs
