[package]
edition = "2018"
name = "k8-client"
version = "1.1.2"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Core Kubernetes metadata traits"
repository = "https://github.com/infinyon/k8-api"
license = "Apache-2.0"
categories = ["api-bindings", "asynchronous", "encoding", "network-programming"]
readme = "README.md"


[dependencies]
tracing = "0.1.19"
tracing-futures = "0.2.4"
bytes = "0.5.4"
base64 = { version = "0.11.0" }
async-h1 = "2.1.2"
futures-lite = "1.7.0"
# futures = { version = "0.3.4" }
rand = { version = "0.7.3" }
# isahc = { version = "0.8.2", features = ["json", "static-curl"], optional = true }
# curl = { version = "0.4.25", features = ["mesalink"], optional = true }
# openssl-sys = { version = "0.9.43", features = ["vendored"], optional = true }
# hyper = { version = "0.13.2", default-features = false, features = ["stream"], optional = true }
# tokio = { version = "0.2.11", default-features = false, optional = true }
webpki = { version = "0.21.0" }
# hyper-rustls = { version = "0.20.0", optional = true }
rustls = { version = "0.18.0" }
pin-utils = "0.1.0"
serde = { version = "1.0.103", features = ['derive'] }
serde_json = "1.0.40"
serde_qs = "0.5.0"
async-trait = "0.1.21"
fluvio-future = { version = "0.1.0" }
k8-obj-core = { version = "1.1.0", path = "../k8-obj-core" }
k8-obj-metadata = { version = "1.0.0", path = "../k8-obj-metadata" }
k8-metadata-client = { version = "1.0.0", path = "../k8-metadata-client" }
k8-diff = { version = "0.1.0", path = "../k8-diff" }
k8-config = { version = "1.0.0", path = "../k8-config" }


[dev-dependencies]
rand = "0.7.2"
async-trait = "0.1.21"
fluvio-future = { version = "0.1.0", features = ["fixture"] }
flv-util = { version = "0.5.0", features = ["fixture"] }
k8-obj-app = { version = "1.0.0", path = "../k8-obj-app" }
k8-obj-core = { version = "1.1.0", path = "../k8-obj-core" }
